# VUTFIT-2024-ICP-2DRobot-Simulator

./: Makefile  README.md  README.txt
doc/: Doxyfile
examples/: labyrinth.csv  map1.csv  map2.csv  map3.csv  map4.csv
src/Robots/: CMakeLists.txt  creatorwidget.cpp  creatorwidget.h  creatorwidget.ui  customgraphicsscene.cpp  customgraphicsscene.h  environment.cpp  environment.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mappainter.cpp  mappainter.h  objectpainter.cpp  objectpainter.h  obstacle.cpp  obstacle.h  robot.cpp  robot.h  simulationwidget.cpp  simulationwidget.h  simulationwidget.ui  welcomewidget.cpp  welcomewidget.h  welcomewidget.ui
